Ajustes en clases para respetar paradigma de objetos, se añade grafico dia al proyecto. Se elimina junit en los test para evitar complejidad.